--- a/dreamland-admin/src/main/resources/templates/system/role/role-list.html
+++ b/dreamland-admin/src/main/resources/templates/system/role/role-list.html
@@ -4,7 +4,7 @@
 <body>
 <!-- 头部信导航 -->
 <div class="x-nav">
-    <button class="layui-btn layui-btn-sm" onclick="xadmin.open('添加用户','user/add',800,600)"><i
+    <button class="layui-btn layui-btn-sm" onclick="xadmin.open('添加角色','role/add',800,600)"><i
             class="layui-icon"></i>添加
     </button>
     <a class="layui-btn layui-btn-sm" style="line-height:1.6em;margin-top:3px;float:right"
@@ -19,15 +19,8 @@
             <div class="layui-card-body ">
                 <form class="layui-form layui-col-space5">
                     <div class="layui-inline layui-show-xs-block">
-                        <input type="text" id="loginName" placeholder="请输入登录名" autocomplete="off"
+                        <input type="text" id="roleName" placeholder="请输入角色名" autocomplete="off"
                                class="layui-input">
-                    </div>
-                    <div class="layui-inline layui-show-xs-block">
-                        <select id="status">
-                            <option value="">全部</option>
-                            <option value="0">正常</option>
-                            <option value="1">禁用</option>
-                        </select>
                     </div>
                     <div class="layui-inline layui-show-xs-block">
                         <button class="layui-btn" lay-submit="" lay-filter="sreach"><i class="layui-icon">&#xe615;</i>
@@ -41,7 +34,7 @@
                     <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
                     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
                 </script>
-                <table id="userList" class="layui-hide" lay-filter="user"></table>
+                <table id="roleList" class="layui-hide" lay-filter="role"></table>
             </div>
         </div>
     </div>
@@ -51,41 +44,31 @@
     layui.use(['table'], function () {
         var table = layui.table;
         table.render({
-            id: 'userList',
-            elem: '#userList',
+            id: 'roleList',
+            elem: '#roleList',
             method: 'post',
             height: 'full-200',
             toolbar: '#toolbarTable',
             defaultToolbar: ['print', 'exports'],
-            url: 'user/list',
+            url: 'role/list',
             cellMinWidth: 100,
             cols: [
                 [
                     {field: 'num', align: 'center', minWidth: '50', title: '序号', type: 'numbers'},
-                    {field: 'userName', sort: true, align: 'center', title: '用户名'},
-                    {field: 'loginName', sort: true, align: 'center', title: '登录名'},
-                    {field: 'email', sort: true, align: 'center', title: '邮箱', minWidth: '180'},
-                    {field: 'phone', sort: true, align: 'center', title: '手机号码', minWidth: '110'},
+                    {field: 'roleName', sort: true, align: 'center', title: '角色名称'},
+                    {field: 'roleKey', sort: true, align: 'center', title: '角色权限'},
                     {
-                        field: 'sex', sort: true, align: 'center', title: '用户性别', minWidth: '120',
+                        field: 'status', sort: true, align: 'center', title: '角色状态', minWidth: '110',
                         templet: function (d) {
-                            return d.status == "0" ? "男" : "女";
+                            return d.status == "0" ? "正常" : "停用";
                         }
                     },
                     {
-                        field: 'status', sort: true, align: 'center', title: '帐号状态', minWidth: '120',
-                        templet: function (d) {
-                            return d.status == "0" ? "正常" : "禁用";
-                        }
-                    },
-                    {
-                        field: 'delFlag', sort: true, align: 'center', title: '删除标志', minWidth: '120',
+                        field: 'delFlag', sort: true, align: 'center', title: '删除标志', minWidth: '110',
                         templet: function (d) {
                             return d.delFlag == "0" ? "存在" : "逻辑删除";
                         }
                     },
-                    {field: 'loginIp', align: 'center', title: '最后登陆IP'},
-                    {field: 'loginDate', sort: true, align: 'center', title: '最后登陆时间', minWidth: '180'},
                     {fixed: 'right', align: 'center', title: '操作', toolbar: "#toolbar"}
                 ]
             ],
@@ -93,10 +76,10 @@
         });
 
         //监听行工具事件
-        table.on('tool(user)', function (obj) {
+        table.on('tool(role)', function (obj) {
             if (obj.event === 'del') {
                 layer.confirm('是否删除该条信息', function (index) {
-                    $.post('user/remove', {userId:obj.data.userId}, function (data) {
+                    $.post('role/remove', {roleId:obj.data.roleId}, function (data) {
                         if ("0" == data.code) {
                             obj.del();
                             layer.close(index);
@@ -107,15 +90,14 @@
                     });
                 });
             } else if (obj.event === 'edit') {
-                xadmin.open('修改信息', 'user/edit/' + obj.data.userId, 800, 600);
+                xadmin.open('修改信息', 'role/edit/' + obj.data.roleId, 800, 600);
             }
         });
         //搜索
         $('.layui-form .layui-btn').on('click', function () {
-            table.reload('userList', {
+            table.reload('roleList', {
                 where: {
-                    loginName: $("#loginName").val(),
-                    status: $("#status").val()
+                    roleName: $("#roleName").val()
                 }
             });
             return false;
