--- a/dreamland-admin/src/main/resources/templates/system/user/user-edit.html
+++ b/dreamland-admin/src/main/resources/templates/system/user/user-edit.html
@@ -2,6 +2,105 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:include="include :: header"></head>
 <body>
+<div class="layui-fluid">
+    <div class="layui-row">
+        <form class="layui-form" th:object="${user}">
+            <input name="userId" type="hidden" th:field="*{userId}"/>
+            <div class="layui-form-item">
+                <label for="loginName" class="layui-form-label">
+                    <span class="x-red">*</span>登录名
+                </label>
+                <div class="layui-input-inline">
+                    <input type="text" id="loginName" th:field="*{loginName}" name="loginName" required=""
+                           lay-verify="required"
+                           autocomplete="off" class="layui-input">
+                </div>
+                <div class="layui-form-mid layui-word-aux">
+                    <span class="x-red">*</span>将会成为您唯一的登入名
+                </div>
+            </div>
 
+            <div class="layui-form-item">
+                <label for="userName" class="layui-form-label">
+                    <span class="x-red">*</span>用户名
+                </label>
+                <div class="layui-input-inline">
+                    <input type="text" id="userName" th:field="*{userName}" name="userName" required=""
+                           lay-verify="required"
+                           autocomplete="off" class="layui-input">
+                </div>
+                <div class="layui-form-mid layui-word-aux">
+                    <span class="x-red">*</span>页面显示的你的名字
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label for="phone" class="layui-form-label">
+                    <span class="x-red">*</span>手机
+                </label>
+                <div class="layui-input-inline">
+                    <input type="text" id="phone" th:field="*{phone}" name="phone" required="" lay-verify="phone"
+                           autocomplete="off" class="layui-input">
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label for="email" class="layui-form-label">
+                    <span class="x-red">*</span>邮箱
+                </label>
+                <div class="layui-input-inline">
+                    <input type="text" id="email" th:field="*{email}" name="email" required="" lay-verify="email"
+                           autocomplete="off" class="layui-input">
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label"><span class="x-red">*</span>性别</label>
+                <div class="layui-input-inline">
+                    <select name="sex" id="sex" lay-verify="required" lay-search="">
+                        <option value="0" th:field="*{sex}">男</option>
+                        <option value="1" th:field="*{sex}">女</option>
+                    </select>
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label"><span class="x-red">*</span>账号状态</label>
+                <div class="layui-input-inline">
+                    <select name="sex" id="status" lay-verify="required" lay-search="">
+                        <option value="0" th:field="*{status}">正常</option>
+                        <option value="1" th:field="*{status}">禁用</option>
+                    </select>
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label"><span class="x-red">*</span>角色</label>
+                <div class="layui-input-block">
+                    <input name="roleIds" type="checkbox" th:each="role:${roles}" th:value="${role.roleId}"
+                           th:title="${role.roleName}"
+                           th:checked="${role.flag}" th:disabled="${role.status == '1'}">
+                </div>
+            </div>
+            <div class="layui-input-block">
+                <button class="layui-btn" lay-submit="" lay-filter="edit">立即提交</button>
+                <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+            </div>
+        </form>
+    </div>
+</div>
+<script th:inline="javascript">
+    layui.use(['form'], function () {
+        var form = layui.form;
+
+        form.on('submit(edit)', function (data) {
+            $.post('/admin/system/user/edit', data.field, function (r) {
+                if (r.code === 0) {
+                    var index = parent.layer.getFrameIndex(window.name);//获取当前弹出层的层级
+                    window.parent.location.reload();//刷新父页面
+                    parent.layer.close(index);//关闭弹出层
+                } else {
+                    layer.alert(r.msg, {icon: 6});
+                }
+            });
+            return false;
+        });
+    });
+</script>
 </body>
 </html>
