--- a/dreamland-admin/src/main/resources/templates/system/user/user-list.html
+++ b/dreamland-admin/src/main/resources/templates/system/user/user-list.html
@@ -69,7 +69,7 @@
                     {
                         field: 'sex', sort: true, align: 'center', title: '用户性别', minWidth: '120',
                         templet: function (d) {
-                            return d.status == "0" ? "男" : "女";
+                            return d.sex == "0" ? "男" : "女";
                         }
                     },
                     {
