--- a/dreamland-admin/src/main/resources/templates/system/menu/menu-add.html
+++ b/dreamland-admin/src/main/resources/templates/system/menu/menu-add.html
@@ -1,96 +1,104 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:include="include :: header"></head>
-<body>
-<div class="layui-fluid">
-    <div class="layui-row">
-        <form class="layui-form">
-            <div class="layui-form-item">
-                <label for="menuName" class="layui-form-label">
-                    <span class="x-red">*</span>菜单名称
-                </label>
-                <div class="layui-input-inline">
-                    <input type="text" id="menuName" name="menuName" required="" lay-verify="required"
-                           autocomplete="off" class="layui-input">
-                </div>
-            </div>
-            <!-- 选择菜单作为父菜单，目前只做二级菜单 -->
-            <div class="layui-form-item">
-                <label class="layui-form-label">
-                    <span class="x-red">*</span>父菜单名称
-                </label>
-                <div class="layui-input-inline">
-                    <select name="parentId" id="parentId"
-                            lay-verify="required" lay-search="">
-                        <option th:each="item : ${tree}"
-                                th:text="${item.value}"
-                                th:value="${item.id}">
-                        </option>
-                    </select>
-                </div>
-            </div>
+    <head th:include="include :: header"></head>
+    <body>
+        <div class="layui-fluid">
+            <div class="layui-row">
+                <form class="layui-form">
+                    <div class="layui-form-item">
+                        <label for="menuName" class="layui-form-label">
+                            <span class="x-red">*</span>菜单名称
+                        </label>
+                        <div class="layui-input-inline">
+                            <input type="text" id="menuName" name="menuName" required="" lay-verify="required"
+                                   autocomplete="off" class="layui-input">
+                        </div>
+                    </div>
+                    <!-- 选择菜单作为父菜单，目前只做二级菜单 -->
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">
+                            <span class="x-red">*</span>父菜单名称
+                        </label>
+                        <div class="layui-input-inline">
+                            <select name="parentId" id="parentId"
+                                    lay-verify="required" lay-search="">
+                                <option th:each="item : ${tree}"
+                                        th:text="${item.value}"
+                                        th:value="${item.id}">
+                                </option>
+                            </select>
+                        </div>
+                    </div>
 
-            <div class="layui-form-item">
-                <label for="url" class="layui-form-label">
-                    <span class="x-red">*</span>菜单URL
-                </label>
-                <div class="layui-input-inline">
-                    <input type="text" id="url" name="url" required="" lay-verify="required"
-                           autocomplete="off" class="layui-input">
-                </div>
-                <div class="layui-form-mid layui-word-aux">
-                    <span class="x-red">*</span>参考样式"system/user/add"
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label for="perms" class="layui-form-label">
-                    <span class="x-red">*</span>权限字符串
-                </label>
-                <div class="layui-input-inline">
-                    <input type="text" id="perms" name="perms" required="" lay-verify="required"
-                           autocomplete="off" class="layui-input">
-                </div>
-                <div class="layui-form-mid layui-word-aux">
-                    <span class="x-red">*</span>参考样式"system.user.add"
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label"><span class="x-red">*</span>节点类型
-                </label>
-                <div class="layui-input-inline">
-                    <select name="menuType" id="menuType" lay-verify="required" lay-search="">
-                        <option value="1">菜单</option>
-                        <option value="2">按钮</option>
-                    </select>
-                </div>
-            </div>
+                    <div class="layui-form-item">
+                        <label for="url" class="layui-form-label">
+                            <span class="x-red">*</span>菜单URL
+                        </label>
+                        <div class="layui-input-inline">
+                            <input type="text" id="url" name="url" required="" lay-verify="required"
+                                   autocomplete="off" class="layui-input">
+                        </div>
+                        <div class="layui-form-mid layui-word-aux">
+                            <span class="x-red">*</span>参考样式"system/user/add",无填写#
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label for="perms" class="layui-form-label">
+                            <span class="x-red">*</span>权限字符串
+                        </label>
+                        <div class="layui-input-inline">
+                            <input type="text" id="perms" name="perms" required="" lay-verify="required"
+                                   autocomplete="off" class="layui-input">
+                        </div>
+                        <div class="layui-form-mid layui-word-aux">
+                            <span class="x-red">*</span>参考样式"system.user.add",可修改
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label"><span class="x-red">*</span>节点类型
+                        </label>
+                        <div class="layui-input-inline">
+                            <select name="menuType" id="menuType" lay-verify="required" lay-search="">
+                                <option value="1">菜单</option>
+                                <option value="2">按钮</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label"><span class="x-red">*</span>角色
+                        </label>
+                        <div class="layui-input-block">
+                            <input name="roleIds" type="checkbox" th:each="role:${roles}" th:value="${role.roleId}"
+                                   th:title="${role.roleName}" th:disabled="${role.status == '1'}">
+                        </div>
+                    </div>
 
-            <div class="layui-input-block">
-                <button class="layui-btn" lay-submit="" lay-filter="add">立即提交</button>
-                <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+                    <div class="layui-input-block">
+                        <button class="layui-btn" lay-submit="" lay-filter="add">立即提交</button>
+                        <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+                    </div>
+
+                </form>
             </div>
+        </div>
+        <script th:inline="javascript">
+            layui.use(['form'], function () {
+                var form = layui.form;
 
-        </form>
-    </div>
-</div>
-<script th:inline="javascript">
-    layui.use(['form'], function () {
-        var form = layui.form;
-
-        form.on('submit(add)', function (data) {
-            $.post('/admin/system/menu/add', data.field, function (r) {
-                if (r.code === 0) {
-                    var index = parent.layer.getFrameIndex(window.name);//获取当前弹出层的层级
-                    window.parent.location.reload();//刷新父页面
-                    parent.layer.close(index);//关闭弹出层
-                } else {
-                    layer.alert(r.msg, {icon: 6});
-                }
+                form.on('submit(add)', function (data) {
+                    $.post('/admin/system/menu/add', data.field, function (r) {
+                        if (r.code === 0) {
+                            var index = parent.layer.getFrameIndex(window.name);//获取当前弹出层的层级
+                            window.parent.location.reload();//刷新父页面
+                            parent.layer.close(index);//关闭弹出层
+                        } else {
+                            layer.alert(r.msg, {icon: 6});
+                        }
+                    });
+                    return false;
+                });
             });
-            return false;
-        });
-    });
-</script>
+        </script>
 
-</body>
+    </body>
 </html>
