开发v1.0.0-基本权限管理

--- a/dreamland-admin/src/main/resources/templates/index.html
+++ b/dreamland-admin/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
             <dl class="layui-nav-child">
                 <!-- 二级菜单 -->
                 <dd>
-                    <a onclick="xadmin.open('个人信息','http://www.baidu.com')">个人信息</a></dd>
+                    <a onclick="xadmin.open('个人信息','/')">个人信息</a></dd>
                 <dd>
                     <a href="login">退出</a></dd>
             </dl>
@@ -78,9 +78,6 @@
 <!-- 右侧主体结束 -->
 <!-- 中部结束 -->
 <script type="text/javascript" th:src="@{/js/xadmin.js}"></script>
-<script>
-
-</script>
 </body>
 
 </html>
